提交订单完成

--- a/pos-carts/src/main/resources/api.yml
+++ b/pos-carts/src/main/resources/api.yml
@@ -135,7 +135,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-  /carts/makeOrder/{cartId}:
+  /carts/order/{cartId}:
     post:
       summary: make an order for cart
       operationId: makeOrder
@@ -154,7 +154,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Cart"
+                $ref: object
         default:
           description: unexpected error
           content:
