--- a/pos-deliveries/src/main/resources/api.yml
+++ b/pos-deliveries/src/main/resources/api.yml
@@ -1,40 +1,40 @@
 openapi: "3.0.0"
 info:
   version: 1.0.0
-  title: Orders
+  title: Delivery
   license:
     name: MIT
 paths:
-  /orders:
+  /deliveries:
     get:
-      summary: List all orders
-      operationId: listOrders
+      summary: List all deliveries
+      operationId: listDeliveries
       tags:
-        - orders
+        - delivery
       responses:
         '200':
-          description: A paged array of orders
+          description: A paged array of deliveries
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Orders"
+                $ref: "#/components/schemas/Deliveries"
         default:
           description: unexpected error
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-  /orders/{orderId}:
+  /deliveries/{orderId}:
     get:
-      summary: Info for a specific order
-      operationId: showOrderById
+      summary: Info for a specific delivery
+      operationId: showDeliveryByOrderId
       tags:
         - order
       parameters:
         - name: orderId
           in: path
           required: true
-          description: The id of the order to retrieve
+          description: The id of the order
           schema:
             type: integer
       responses:
@@ -43,7 +43,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Order"
+                $ref: "#/components/schemas/Delivery"
         default:
           description: unexpected error
           content:
@@ -51,17 +51,17 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
 
-  /orders/make/{cartId}:
+  /deliveries/confirm/{orderId}:
     get:
-      summary: make a new order
-      operationId: makeOrder
+      summary: confirm a order
+      operationId: confirmOrder
       tags:
         - order
       parameters:
-        - name: cartId
+        - name: orderId
           in: path
           required: true
-          description: The id of the cart to make order
+          description: The id of the order
           schema:
             type: integer
       responses:
@@ -70,7 +70,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Order"
+                $ref: "#/components/schemas/Delivery"
         default:
           description: unexpected error
           content:
@@ -78,47 +78,21 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
 
-  /orders/deliver/{orderId}:
-    get:
-      summary: deliver a new order
-      operationId: deliverOrder
-      tags:
-        - order
-      parameters:
-        - name: orderId
-          in: path
-          required: true
-          description: The id of the order to make deliver
-          schema:
-            type: integer
-      responses:
-        '200':
-          description: Expected response to a valid request
-          content:
-            application/json:
-              schema:
-                $ref: object
-        default:
-          description: unexpected error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
 
 components:
   schemas:
-    Orders:
+    Deliveries:
       type: array
       items:
-        $ref: "#/components/schemas/Order"
-    Order:
+        $ref: "#/components/schemas/Delivery"
+    Delivery:
       type: object
       properties:
         id:
           type: integer
           format: int32
-        cart:
-          type: map
+        company:
+          type: string
 
     Error:
       type: object
