--- a/pos-gateway/src/main/resources/application.yml
+++ b/pos-gateway/src/main/resources/application.yml
@@ -26,6 +26,11 @@ spring:
       predicates:
         - Path=/api/orders/**              #断言，路径匹配 注意：Path 中 P 为大写
 
+    - id: pos_deliveries_server   #快递
+      uri: http://localhost:8885          #匹配后提供服务的路由地址
+      predicates:
+        - Path=/api/deliveries/**              #断言，路径匹配 注意：Path 中 P 为大写
+
 eureka:
   client:
     service-url:
